@@ -204,6 +204,7 @@ CMainFrame::CMainFrame()
 , m_bFirstTime(TRUE)
 , m_bEscShutdown(FALSE)
 , m_bClearCaseTool(FALSE)
+, m_bExitIfNoDiff(FALSE)
 , m_bShowErrors(TRUE)
 , m_CheckOutMulti(FALSE)
 , m_bVCProjSync(FALSE)
